--- a/client/views/app.ejs
+++ b/client/views/app.ejs
@@ -51,6 +51,8 @@ div {
         Holder: <input name="holder" type="text" /> <br />
        <input type="submit" />
     </form>
+</br>
+<p><% =response%></p>
 <div>
 </body>
 </html>
